# sas_migration_700_scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: analyze.yml  ci.yml
analyzer/: classifier.py  cli.py  dependency_graph.py  report_generator.py  sas_parser.py
analyzer/tests/: test_analyzer.py  test_db_sources.py
converter/: bedrock_converter.py  cli.py  prompts.py  transpiler.py
converter/templates/: glue_job.py.j2  lambda_handler.py.j2
converter/tests/: test_bedrock_converter.py  test_lambda_target.py  test_transpiler.py
glue_jobs/common/: io_utils.py  logging_utils.py  quality_utils.py  transform_utils.py
glue_jobs/jobs/: sample_complex.py  sample_medium.py  sample_simple.py
infrastructure/: data_lake.tf  glue.tf  lambda.tf  main.tf  monitoring.tf  networking.tf  orchestration.tf  outputs.tf  secrets.tf  variables.tf
infrastructure/environments/: dev.tfvars  prod.tfvars
lambda_jobs/common/: io_utils.py  transform_utils.py
orchestration/: pipeline_generator.py
orchestration/templates/: etl_pipeline.json
reports/: conversion_report.csv  dependencies.dot  dependencies.json  execution_order.txt  inventory.csv  inventory.html
sas_source/: sample_complex.sas  sample_db_sources.sas  sample_downstream.sas  sample_medium.sas  sample_simple.sas
validation/: cli.py  comparator.py
validation/tests/: test_comparator.py
