[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-migration"
version = "0.1.0"
description = "SAS to PySpark (AWS Glue) migration toolkit"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "boto3>=1.34.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "networkx>=3.2.0",
    "datacompy[spark]>=0.19.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "moto[glue,s3,stepfunctions]>=5.0.0",
]

[project.scripts]
sas-analyze = "analyzer.cli:main"
sas-convert = "converter.cli:main"
sas-validate = "validation.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["converter/tests", "validation/tests", "analyzer/tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["analyzer*", "converter*", "glue_jobs*", "lambda_jobs*", "validation*", "orchestration*"]
